# ONNX-Inference-C

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  conda.yml  inference.h  main.c  requirements.txt  train.py
src/: main.c
